src/styles.styl
@import "~@angular/material/prebuilt-themes/indigo-pink.css"
@import url('https://fonts.googleapis.com/icon?family=Material+Icons')

body {
  margin: 0;
  font-family: Roboto, sans-serif;
  min-height: 100vh;
  background-color: #f5f5f5;

  form {
    font-size: 16px;
  }

  .mat-micro-fab {
    width: 24px;
    height: 24px;

    .mat-icon {
      font-size: 18px;
      margin-top: -12px;
      margin-left: 3px;
    }
  }

  .form-buttons {
    button {
      min-width: 103px;
      margin-right: 8px;
    }
  }

  .content-align-center {
    justify-content: center;
    align-items: center;
  }
}

